--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
       <br>
 
       <div class="text-center">
-        <a href="survey.html"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Take the survey</button></a>
+        <a href="survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Take the survey</button></a>
       </div>
 
     </div>
